--- a/index.css
+++ b/index.css
@@ -223,7 +223,8 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     justify-content: center;
     justify-content: space-around;
     padding-top: 7%;
-    padding-bottom: 11.5%;
+    /* padding-bottom: 11.5%; */
+    padding-bottom: 1%;
     margin: 0 auto; 
 }
 
